<resources>
    <string name="app_name">Noten App</string>
    <string name="notenHalbjahrText">Halbjahr: 12/1</string>
    <string name="notenSchnittText">Schnitt: 0,00</string>
    <string name="notenAbischnittText">Abi Note: 0,0</string>
    <string name="fachListeFachname">Fachname</string>
    <string name="fachListeEndnote">N/A Punkte</string>
    <string name="notenListeHeadline">Notenart</string>
    <string name="notenListeDatum">00.00.0000</string>
    <string name="notenListeNote">00</string>
    <string name="notenListeBemerkung">Bemerkung</string>
    <string name="addNeueNoteTitel">Fach</string>
    <string name="inputDatumHint">Datum</string>
    <string name="inputNoteHint">Note</string>
    <string name="inputArtHint">Art</string>
    <string name="inputBemerkungHint">Bemerkung</string>
    <string name="fachListeSchnitt">N/A</string>
    <string name="inputGewichtHint">Gewicht</string>
    <string name="notenUserNameText">Vorname Nachname</string>
    <string name="settingsTitel">Einstellungen</string>
    <string name="settingsNameInputText">Vorname Nachname</string>
    <string name="settingsHalbjahrText">Abschnitt</string>
    <string name="settingsFaecherlisteTitel">Abschnitt Fächer</string>
    <string name="settingsFachNameInput">Fachname</string>
    <string name="settingsFachTextfarbText">Hintergrund</string>
    <string name="checkBoxLöschen">Löschen</string>
    <string name="checkBoxAbifach">Abifach</string>
    <string name="fachTextFarbe">Textfarbe</string>
    <string name="settingsFachDeleteText">Löschen</string>
</resources>