<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/fachListeCard"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fachListeFachname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/fachListeFachname"
                android:textColor="@color/white_text"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fachListeEndnote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fachListeEndnote"
                android:textColor="@color/white_text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/fachListeFachname"
                app:layout_constraintTop_toBottomOf="@+id/fachListeFachname" />

            <TextView
                android:id="@+id/fachListeSchnitt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:paddingBottom="10dp"
                android:text="@string/fachListeSchnitt"
                android:textColor="@color/white_text"
                app:layout_constraintStart_toStartOf="@+id/fachListeEndnote"
                app:layout_constraintTop_toBottomOf="@+id/fachListeEndnote" />

            <ImageView
                android:id="@+id/fachListeAddIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_add"
                app:tint="@color/white_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fachListeNotenListe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/fachListeEndnote"
                app:layout_constraintTop_toBottomOf="@+id/fachListeSchnitt" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>